--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,8 @@
 								<div class="inner">
 									<header class="major">
 										<h1>Nae-Chyun Chen</h1>
-										<p><a href="files/resume_20201113.pdf">Resume (PDF)</a>, updated: Nov 17th, 2020</p>
+										<p><a href="files/resume_20210505.pdf">Resume (PDF)</a>,
+										<a href="files/cv_20210505.pdf">CV (PDF)</a>, updated: May 5th, 2021</p>
 									</header>
 
 									<!-- Content -->
@@ -84,11 +85,11 @@
 											<div class="col-6 col-12-small">
 												<h2>Working</h2>
 												<ul class="alt">
-													<li> <b>Research Intern</b> (summer, 2020) & <b>Student Researcher</b> (fall, 2020) </br>
+													<li> <b>Research Intern</b> & <b>Student Researcher</b> (2020) </br>
 														Google, Remote, USA </br>
 														DeepVariant Team (Brain Genomics), Google Health
 													</li>
-													<li> <b>Technical Intern</b> (summer, 2016) </br>
+													<li> <b>Technical Intern</b> (2016) </br>
 														Synopsys, Sunnyvale, California, USA </br>
 														IC Compiler II (ICC2) Team
 													</li>
