--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>陳乃群 Nae-Chyun Chen</h1>
+								<h1>Nae-Chyun Chen 陳乃群</h1>
 							</header>
 							<div class="content">
 								<p><font size="3">PhD student at JHU CS.<br />
 								I develop computational genomics methods.<br />
-								Live in Baltimore. From Taiwan. He/Him/His. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></p>
+								He/Him/His. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></p>
 								<!-- <ul class="actions">
 									<li><a href="#one" class="button next scrolly">Know more about me</a></li>
 								</ul> -->
