--- a/publication.html
+++ b/publication.html
@@ -44,21 +44,30 @@
 								<div class="inner">
 									<header class="major">
 										<h1>Publications</h1>
+										<sup>*</sup>: equal contribution
 									</header>
 									<h3>Highlights</h3>
 									<ul class="alt">
-										<li><b>Chen, Nae-Chyun</b>, Brad Solomon, Taher Mun, Sheila Iyer, Ben Langmead. "<a href="https://www.biorxiv.org/content/10.1101/2020.03.03.975219v1">Reducing reference bias using multiple population reference genomes.</a>" <i>BioRxiv</i>, 975219 (2020).</li>
+										<li><b>Chen, Nae-Chyun</b>, Alexey Kolesnikov, Sidharth Goel, Taedong Yun, Pi-Chuan Chang<sup>*</sup>, Andrew Carroll<sup>*</sup>. "<a href="https://doi.org/10.1101/2021.01.06.425550">Improving variant calling using population data and deep learning.</a>" <i>bioRxiv</i> (2021).</li>
+										<li>Mun, Taher<sup>*</sup>, <b>Nae-Chyun Chen<sup>*</sup></b>, Ben Langmead. "<a href="https://doi.org/10.1101/2021.02.05.429867">LevioSAM: Fast lift-over of alternate reference alignments.</a>" <i>bioRxiv</i> (2021).</li>
+										<li>Lin, Mao-Jan<sup>*</sup>, Yu-Chun Lin<sup>*</sup>, <b>Nae-Chyun Chen<sup>*</sup></b>, Allen Chilun Luo, Sheng-Kai Lai, Chia-Lang Hsu, Jacob Shjui Hsu, Chien-Yu Chen, Wei-Shiung Yang, Pei-Lung Chen. "<a href="https://doi.org/10.1101/2020.11.27.399857">Profiling Germline Adaptive Immune Receptor Repertoire with gAIRR Suite</a>. <i>bioRxiv</i> (2021).</li>
+										<li><b>Chen, Nae-Chyun</b>, Brad Solomon, Taher Mun, Sheila Iyer, Ben Langmead. "<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02229-3">Reference flow: reducing reference bias using multiple population genomes.</a>" <i>Genome biology</i> 22 (2021): 8.</li>
 										<li>Pritt, Jacob, <b>Nae-Chyun Chen</b>, and Ben Langmead. "<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1595-x">FORGe: prioritizing variants for graph genomes.</a>" <i>Genome biology</i> 19.1 (2018): 220.</li>
-										<li>Liao, Yi-Lun, Yu-Cheng Li, <b>Nae-Chyun Chen</b>, and Yi-Chang Lu. "<a href="https://ieeexplore.ieee.org/abstract/document/8445105">Adaptively Banded Smith-Waterman Algorithm for Long Reads and Its Hardware Accelerator.</a>" <i>2018 IEEE 29th International Conference on Application-specific Systems, Architectures and Processors (ASAP).</i> IEEE, 2018.</li>
-										<li><b>Chen, Nae-Chyun</b>, Yu-Cheng Li, and Yi-Chang Lu. "<a href="files/2018-ISCAS.pdf">A Memory-Efficient FM-Index Constructor for Next-Generation Sequencing Applications on FPGAs.</a>" <i>2018 IEEE International Symposium on Circuits and Systems (ISCAS).</i> IEEE, 2018.</li>
+										<!-- <li>Liao, Yi-Lun, Yu-Cheng Li, <b>Nae-Chyun Chen</b>, and Yi-Chang Lu. "<a href="https://ieeexplore.ieee.org/abstract/document/8445105">Adaptively Banded Smith-Waterman Algorithm for Long Reads and Its Hardware Accelerator.</a>" <i>2018 IEEE 29th International Conference on Application-specific Systems, Architectures and Processors (ASAP).</i> IEEE, 2018.</li> -->
+										<li><b>Chen, Nae-Chyun</b>, Yu-Cheng Li, and Yi-Chang Lu. "<a href="https://arxiv.org/abs/2102.03045">A Memory-Efficient FM-Index Constructor for Next-Generation Sequencing Applications on FPGAs.</a>" <i>2018 IEEE International Symposium on Circuits and Systems (ISCAS).</i> IEEE, 2018.</li>
 										<li><b>Chen, Nae-Chyun</b>, Tai-Yin Chiu, Yu-Cheng Li, Yu-Chun Chien, and Yi-Chang Lu. "<a href="https://ieeexplore.ieee.org/abstract/document/7348380">Power efficient special processor design for burrows-wheeler-transform-based short read sequence alignment.</a>" <i>2015 IEEE Biomedical Circuits and Systems Conference (BioCAS).</i> IEEE, 2015</li>
 									</ul>
 									<h3>Full List</h3>
 									<ol>
-										<li><b>Chen, Nae-Chyun</b>, Brad Solomon, Taher Mun, Sheila Iyer, Ben Langmead. "<a href="https://www.biorxiv.org/content/10.1101/2020.03.03.975219v1">Reducing reference bias using multiple population reference genomes.</a>" <i>BioRxiv</i>, 975219 (2020).</li>
+										<li><b>Chen, Nae-Chyun</b>, Alexey Kolesnikov, Sidharth Goel, Taedong Yun, Pi-Chuan Chang<sup>*</sup>, Andrew Carroll<sup>*</sup>. "<a href="https://doi.org/10.1101/2021.01.06.425550">Improving variant calling using population data and deep learning.</a>" <i>bioRxiv</i> (2021).</li>
+										<li>Mun, Taher<sup>*</sup>, <b>Nae-Chyun Chen<sup>*</sup></b>, Ben Langmead. "<a href="https://doi.org/10.1101/2021.02.05.429867">LevioSAM: Fast lift-over of alternate reference alignments.</a>" <i>bioRxiv</i> (2021).</li>
+										<li>Lin, Mao-Jan<sup>*</sup>, Yu-Chun Lin<sup>*</sup>, <b>Nae-Chyun Chen<sup>*</sup></b>, Allen Chilun Luo, Sheng-Kai Lai, Chia-Lang Hsu, Jacob Shjui Hsu, Chien-Yu Chen, Wei-Shiung Yang, Pei-Lung Chen. "<a href="https://doi.org/10.1101/2020.11.27.399857">Profiling Germline Adaptive Immune Receptor Repertoire with gAIRR Suite</a>. <i>bioRxiv</i> (2021).</li>
+										<li><b>Chen, Nae-Chyun</b>, Brad Solomon, Taher Mun, Sheila Iyer, Ben Langmead. "<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02229-3">Reference flow: reducing reference bias using multiple population genomes.</a>" <i>Genome biology</i> 22 (2021): 8.</li>
 										<li>Pritt, Jacob, <b>Nae-Chyun Chen</b>, and Ben Langmead. "<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1595-x">FORGe: prioritizing variants for graph genomes.</a>" <i>Genome biology</i> 19.1 (2018): 220.</li>
 										<li>Liao, Yi-Lun, Yu-Cheng Li, <b>Nae-Chyun Chen</b>, and Yi-Chang Lu. "<a href="https://ieeexplore.ieee.org/abstract/document/8445105">Adaptively Banded Smith-Waterman Algorithm for Long Reads and Its Hardware Accelerator.</a>" <i>2018 IEEE 29th International Conference on Application-specific Systems, Architectures and Processors (ASAP).</i> IEEE, 2018.</li>
-										<li><b>Chen, Nae-Chyun</b>, Yu-Cheng Li, and Yi-Chang Lu. "<a href="https://ieeexplore.ieee.org/abstract/document/8350897">A Memory-Efficient FM-Index Constructor for Next-Generation Sequencing Applications on FPGAs.</a>" <i>2018 IEEE International Symposium on Circuits and Systems (ISCAS).</i> IEEE, 2018.</li>
+										<li><b>Chen, Nae-Chyun</b>, Yu-Cheng Li, and Yi-Chang Lu. "<a href="https://arxiv.org/abs/2102.03045">A Memory-Efficient FM-Index Constructor for Next-Generation Sequencing Applications on FPGAs.</a>" <i>2018 IEEE International Symposium on Circuits and Systems (ISCAS).</i> IEEE, 2018. 
+										<i>(This paper was accepted by 2018 IEEE ISCAS, but later removed because the co-author presented on-behalf of us hadn't fulfilled the presentation requirement. We posted the manuscript to arXiv with the agreement from IEEE.)</i>
+										</li>
 										<li>Lin, Mao-Jan, Chih-Yu Chang, Yu-Cheng Li, <b>Nae-Chyun Chen</b>, and Yi-Chang Lu. "<a href="https://ieeexplore.ieee.org/abstract/document/8351254">A Hybrid Flow for Multiple Sequence Alignment with a BLASTn Based Pairwise Alignment Processor.</a>" <i>2018 IEEE International Symposium on Circuits and Systems (ISCAS).</i> IEEE, 2018.</li>
 										<li>Chang, Chih-Yu, Yu-Cheng Li, <b>Nae-Chyun Chen</b>, Xiao-Xuan Huang, and Yi-Chang Lu. "<a href="https://ieeexplore.ieee.org/abstract/document/7792921">A special processor design for nucleotide basic local alignment search tool with a new banded two-hit method.</a>" <i>2016 IEEE Nordic Circuits and Systems Conference (NORCAS).</i> IEEE, 2016.</li>
 										<li>Liu, Chun-Shen, <b>Nae-Chyun Chen</b>, Yu-Cheng Li, and Yi-Chang Lu. "<a href="https://ieeexplore.ieee.org/abstract/document/7803916">An FPGA-based quality filter for de novo sequence assembly pipeline.</a>" <i>2016 IEEE Asia Pacific Conference on Circuits and Systems (APCCAS).</i> IEEE, 2016.</li>
@@ -68,7 +77,6 @@
 									</ol>
 								</div>
 							</section>
-
 					</div>
 
 				<!-- Footer -->
