--- a/research.html
+++ b/research.html
@@ -54,11 +54,14 @@
 
 										A solution is to use a reference genome containing population information. 
 										Our study, FORGe, presents a ranking strategy for the inclusion of population data in a comprehensive graph genome. 
-										Further, I develop "reference flow" to use a small number of additional population-aware linear references to improve alignment. 
+										We also devlope levioSAM to perform fast lift-over of alignments that are based on a variant-aware reference.
+										Further, the reference flow framework uses a small number of additional population-aware linear references to improve alignment. 
 									</br>
 									<ul>
-										<li>Publications: <a href="https://www.biorxiv.org/content/10.1101/2020.03.03.975219v1">Chen <i>et al.</i> (2020, preprint)</a>, 
-											<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1595-x">Pritt <i>et al.</i> (2018)</a></li>
+										<li>Publications: 
+											<a href="https://doi.org/10.1101/2021.02.05.429867">Mun, Chen, Langmead (2021, preprint)</a>, 
+											<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02229-3">Chen <i>et al.</i> (2021)</a>, 
+											<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1595-x">Pritt, Chen, Langmead (2018)</a></li>
 										<li>Presentation: <a href="files/2019-Chen-Recomb_seq.pdf">RECOMB-Seq (Washington DC, USA, 2019)</a>, 
 											<a href="files/2019-Chen-GenomeInformatics.pdf">Genome Informatics (CSHL, USA, 2019)</a></li>
 										<li>Software: 
@@ -76,7 +79,10 @@
 										This model is more accurate than the default DeepVariant model.
 									</br>
 									<ul>
+										<li>Publications: <a href="https://doi.org/10.1101/2021.01.06.425550">Chen <i>et al.</i> (2021, preprint)</a>
+										</li>
 										<li>Presentation: Biological Data Science (virtual, 2020)</li>
+										<li>Software:<a href="https://github.com/google/deepvariant">DeepVariant</a></li>
 									</ul>
 									</p>
 									<h3>Developing computational methods for biological and medical data</h3>
@@ -86,6 +92,7 @@
 										Also, I work with collaborators at National Taiwan Univeristy to study immunogenomics such as the human leukocyte antigen (HLA) complex and the Adaptive Immune Receptor Repertoire (AIRR).
 									</br>
 									<ul>
+										<li>Publications: <a href=https://doi.org/10.1101/2020.11.27.399857">Lin <i>et al.</i> (2021, preprint)</a></li>
 										<li>Presentation: JHU Chromatin Workshop (2019)</li>
 									</ul>
 									</p>
