--- a/life.html
+++ b/life.html
@@ -102,8 +102,8 @@
 											
 												<ul>
 												Stadiums I've visited:
-													<li>MLB: Boston (3), Baltimore (3), NY Yankees (2), Chicago Cubs (2), San Francisco (2), NY Mets, Washinton, Seattle</li>
-													<li>NBA: Dallas, Washinton (2), LA Lakers, Boston, Brooklyn, Chicago, New Orleans, Miami</li>
+													<li>MLB: Boston (3), Baltimore (3), NY Yankees (2), Chicago Cubs (2), San Francisco (2), NY Mets, Washington, Seattle</li>
+													<li>NBA: Dallas, Washington (2), LA Lakers, Boston, Brooklyn, Chicago, New Orleans, Miami</li>
 													<li>NFL: Baltimore (2), Dallas, NY Giants, Philadelphia, San Francisco (pre-season)</li>
 													<li>NHL: Dallas</li>
 												</ul>
