--- a/aboutme.html
+++ b/aboutme.html
@@ -52,7 +52,7 @@
 										<p> I'm interested in computational genomics. 
 											I work on methods to improve sequence alignment and reduce reference bias using population genomic data. 
 											I develop computational methods to answer biological and medical questions.
-											I'm also experienced in designing hardware architectures based on FPGA and ASIC to accelerate computing. </br></br>
+											I'm also experienced in designing hardware architectures on FPGA and ASIC to accelerate computing. </br></br>
 											<i>#computational_genomics</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#sequence_alignment</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#pangenome</i> 
@@ -60,8 +60,9 @@
 										<h2 id="content">Skills</h2>
 										<p> 
 											<ul>
-												<li>Languages: Mandarin (traditional), English</li>
-												<li>Progamming languages: Python, R, C++, C, Verilog</li>
+												<li>Languages: Mandarin (traditional), English, Taiwanese</li>
+												<li>Progamming languages: Python, R, C++, C, Rust</li>
+												<li>Hardware description language: Verilog</li>
 												<li>Tools: git, Latex, Bash, Snakemake</li>
 											</ul>
 										</p>
