--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									</span>
 									<header class="major">
 										<h2><a href="research.html" class="link">Research</a></h2>
-										<p><font size="3">I develop fast and accurate computational genomics methods</font></p>
+										<!-- <p><font size="3">I develop fast and accurate computational genomics methods</font></p> -->
 									</header>
 								</article>
 								<article>
@@ -82,7 +82,7 @@
 									</span>
 									<header class="major">
 										<h2><a href="publication.html" class="link">Publications</a></h2>
-										<p><font size="3">I publish papers in biological journals and IEEE conferences</font></p>
+										<!-- <p><font size="3">I publish papers in biological journals and IEEE conferences</font></p> -->
 									</header>
 								</article>
 								<article>
@@ -90,8 +90,8 @@
 										<img src="images/jangjun.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h2><a href="life.html" class="link">Life</a></h2>
-										<p><font size="3">Travel | Sports | Photography</font></p>
+										<h2><a href="life.html" class="link">Travel | Sports | Photography</a></h2>
+										<!-- <p><font size="3">Travel | Sports | Photography</font></p> -->
 									</header>
 								</article>
 							</section>
