--- a/life.html
+++ b/life.html
@@ -69,12 +69,14 @@
 											<p>
 												I'm a great enthusiatist of traveling, especially in nature. 
 												I love to plan road trips and visit national parks. 
-												Grand Teton is my favorite park in the states. 
-												Outside the US, Jasper (Canada) and Scottish Highlands (UK) are the best.
+												Grand Teton NP is my favorite park in the states. 
+												Outside the US, Jasper NP (Canada) and Scottish Highlands (UK) are fantastic.
 											</br>
 												And of course, my home town, Taipei, Taiwan. 
-												From Taipei, you could easily access a national park featuring great volcanic geological landscape, visit historic towns along railroad, or enjoy spectacular rocky seashore within an hour, with public transportation. 
-												(I yet haven't mentioned great food!) 
+												From Taipei, you could easily access the Yangmingshan national park featuring great 
+												volcanic geological landscape, visit historic towns along the railroad, or 
+												view spectacular rocky seashore within an hour, all with public transportation. 
+												(I have yet mentioned the amazing food!) 
 											</br></br>
 												Short term goal: Zion National Park. Really want to do the Angels Landing Trail!
 											</p>
@@ -122,11 +124,11 @@
 											</header>
 											<p>
 												Photography is another reason I love traveling. 
-												I take a lot of landscapes. 
+												I take a lot of landscape photos. 
 											</br>
 												Please visit my <a href="https://www.flickr.com/photos/milkschen">Flickr</a> and <a href="https://www.instagram.com/milksphotography/">Instagram</a> for more great photos!
 											</br>
-												(I shoot with Nikon D750, Sigma 35mm f/1.4 Art, Tokina 70-200mm f/2.8, and sometimes Tokina 11-16mm f/2.8.)
+												(I shoot with Nikon D750, Sigma 35mm f/1.4 Art, Sigma 14-24mm f/2.8, and Tokina 70-200mm f/2.8.)
 											</p>
 										</div>
 									</div>
