--- a/research.html
+++ b/research.html
@@ -59,11 +59,11 @@
 									</br>
 									<ul>
 										<li>Publications: 
-											<a href="https://doi.org/10.1101/2021.02.05.429867">Mun, Chen, Langmead (2021, preprint)</a>, 
 											<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02229-3">Chen <i>et al.</i> (2021)</a>, 
+											<a href="https://doi.org/10.1093/bioinformatics/btab396">Mun<sup>*</sup>, Chen<sup>*</sup>, Langmead (2021)</a>, 
 											<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1595-x">Pritt, Chen, Langmead (2018)</a></li>
-										<li>Presentation: <a href="files/2019-Chen-Recomb_seq.pdf">RECOMB-Seq (Washington DC, USA, 2019)</a>, 
-											<a href="files/2019-Chen-GenomeInformatics.pdf">Genome Informatics (CSHL, USA, 2019)</a></li>
+										<li>Presentation: <a href="files/2019-Chen-Recomb_seq.pdf">RECOMB-Seq (Washington DC, USA, 2019; poster)</a>, 
+											<a href="files/2019-Chen-GenomeInformatics.pdf">Genome Informatics (CSHL, USA, 2019; poster)</a></li>
 										<li>Software: 
 										<a href="https://github.com/langmead-lab/reference_flow">reference flow</a>, 
 										<a href="https://github.com/alshai/leviosam">levioSAM</a>, 
@@ -81,8 +81,8 @@
 									<ul>
 										<li>Publications: <a href="https://doi.org/10.1101/2021.01.06.425550">Chen <i>et al.</i> (2021, preprint)</a>
 										</li>
-										<li>Presentation: Biological Data Science (virtual, 2020)</li>
-										<li>Software:<a href="https://github.com/google/deepvariant">DeepVariant</a></li>
+										<li>Presentation: Biological Data Science (virtual, 2020; poster)</li>
+										<li>Software: <a href="https://github.com/google/deepvariant">DeepVariant</a></li>
 									</ul>
 									</p>
 									<h3>Developing computational methods for biological and medical data</h3>
@@ -93,7 +93,7 @@
 									</br>
 									<ul>
 										<li>Publications: <a href=https://doi.org/10.1101/2020.11.27.399857">Lin <i>et al.</i> (2021, preprint)</a></li>
-										<li>Presentation: JHU Chromatin Workshop (2019)</li>
+										<li>Presentation: JHU Chromatin Workshop (2019; poster)</li>
 									</ul>
 									</p>
 									<h3>Designing efficient hardware architecture for computational genomics</h3>
@@ -108,7 +108,7 @@
 											<a href="files/2018-ISCAS.pdf">Chen <i>et al.</i> (2018)</a>, 
 											<a href="https://ieeexplore.ieee.org/abstract/document/7348380">Chen <i>et al.</i> (2015)</a></li>
 									<!-- </br> -->
-										<li>Presentations: APCCAS (Jeju, Korea, 2016), BioCAS (Atlanta, USA, 2015)</li>
+										<li>Presentations: APCCAS (Jeju, Korea, 2016; oral), BioCAS (Atlanta, USA, 2015; poster)</li>
 									</ul>
 									</p>
 								</div>
