--- a/publication.html
+++ b/publication.html
@@ -49,7 +49,7 @@
 									<h3>Highlights</h3>
 									<ul class="alt">
 										<li><b>Chen, Nae-Chyun</b>, Alexey Kolesnikov, Sidharth Goel, Taedong Yun, Pi-Chuan Chang<sup>*</sup>, Andrew Carroll<sup>*</sup>. "<a href="https://doi.org/10.1101/2021.01.06.425550">Improving variant calling using population data and deep learning.</a>" <i>bioRxiv</i> (2021).</li>
-										<li>Mun, Taher<sup>*</sup>, <b>Nae-Chyun Chen<sup>*</sup></b>, Ben Langmead. "<a href="https://doi.org/10.1101/2021.02.05.429867">LevioSAM: Fast lift-over of alternate reference alignments.</a>" <i>bioRxiv</i> (2021).</li>
+										<li>Mun, Taher<sup>*</sup>, <b>Nae-Chyun Chen<sup>*</sup></b>, Ben Langmead. "<a href="https://doi.org/10.1093/bioinformatics/btab396">LevioSAM: fast lift-over of variant-aware reference alignments.</a>" <i>Bioinformatics</i>, btab396 (2021).</li>
 										<li>Lin, Mao-Jan<sup>*</sup>, Yu-Chun Lin<sup>*</sup>, <b>Nae-Chyun Chen<sup>*</sup></b>, Allen Chilun Luo, Sheng-Kai Lai, Chia-Lang Hsu, Jacob Shjui Hsu, Chien-Yu Chen, Wei-Shiung Yang, Pei-Lung Chen. "<a href="https://doi.org/10.1101/2020.11.27.399857">Profiling Germline Adaptive Immune Receptor Repertoire with gAIRR Suite</a>. <i>bioRxiv</i> (2021).</li>
 										<li><b>Chen, Nae-Chyun</b>, Brad Solomon, Taher Mun, Sheila Iyer, Ben Langmead. "<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02229-3">Reference flow: reducing reference bias using multiple population genomes.</a>" <i>Genome biology</i> 22 (2021): 8.</li>
 										<li>Pritt, Jacob, <b>Nae-Chyun Chen</b>, and Ben Langmead. "<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1595-x">FORGe: prioritizing variants for graph genomes.</a>" <i>Genome biology</i> 19.1 (2018): 220.</li>
@@ -60,7 +60,7 @@
 									<h3>Full List</h3>
 									<ol>
 										<li><b>Chen, Nae-Chyun</b>, Alexey Kolesnikov, Sidharth Goel, Taedong Yun, Pi-Chuan Chang<sup>*</sup>, Andrew Carroll<sup>*</sup>. "<a href="https://doi.org/10.1101/2021.01.06.425550">Improving variant calling using population data and deep learning.</a>" <i>bioRxiv</i> (2021).</li>
-										<li>Mun, Taher<sup>*</sup>, <b>Nae-Chyun Chen<sup>*</sup></b>, Ben Langmead. "<a href="https://doi.org/10.1101/2021.02.05.429867">LevioSAM: Fast lift-over of alternate reference alignments.</a>" <i>bioRxiv</i> (2021).</li>
+										<li>Mun, Taher<sup>*</sup>, <b>Nae-Chyun Chen<sup>*</sup></b>, Ben Langmead. "<a href="https://doi.org/10.1093/bioinformatics/btab396">LevioSAM: fast lift-over of variant-aware reference alignments.</a>" <i>Bioinformatics</i>, btab396 (2021).</li>
 										<li>Lin, Mao-Jan<sup>*</sup>, Yu-Chun Lin<sup>*</sup>, <b>Nae-Chyun Chen<sup>*</sup></b>, Allen Chilun Luo, Sheng-Kai Lai, Chia-Lang Hsu, Jacob Shjui Hsu, Chien-Yu Chen, Wei-Shiung Yang, Pei-Lung Chen. "<a href="https://doi.org/10.1101/2020.11.27.399857">Profiling Germline Adaptive Immune Receptor Repertoire with gAIRR Suite</a>. <i>bioRxiv</i> (2021).</li>
 										<li><b>Chen, Nae-Chyun</b>, Brad Solomon, Taher Mun, Sheila Iyer, Ben Langmead. "<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02229-3">Reference flow: reducing reference bias using multiple population genomes.</a>" <i>Genome biology</i> 22 (2021): 8.</li>
 										<li>Pritt, Jacob, <b>Nae-Chyun Chen</b>, and Ben Langmead. "<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1595-x">FORGe: prioritizing variants for graph genomes.</a>" <i>Genome biology</i> 19.1 (2018): 220.</li>
