--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<h1>Nae-Chyun Chen 陳乃群</h1>
 							</header>
 							<div class="content">
-								<p><font size="3">PhD student at JHU CS.<br />
+								<p><font size="3">PhD candidate at JHU CS.<br />
 								I develop computational genomics methods.<br />
 								He/Him/His. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></p>
 								<!-- <ul class="actions">
