--- a/aboutme.html
+++ b/aboutme.html
@@ -58,28 +58,31 @@
 
 									<!-- Content -->
 										<h2 id="content">Research Interests</h2>
-										<p> I'm interested in computational genomics. 
-											I work on methods to improve sequence alignment and reduce reference bias using population genomic data. 
-											I develop computational methods to answer biological and medical questions.
-											I'm also experienced in designing hardware architectures on FPGA and ASIC to accelerate computing. </br></br>
+										<p> I work on computational genomics, primarily sequence data processing methods.
+											These include sequence alignment and variant calling.
+											One of my main focuses is to reduce reference bias due to assembly artifacts and lack of genetic diversity.
+											I'm also experienced in processing immunogenomics data, such as HLA, TCR, and BCR.
+											Before my PhD work, I designed hardware architectures on FPGA and ASIC to accelerate computing. </br></br>
 											<i>#computational_genomics</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#sequence_alignment</i> &nbsp;&nbsp;&nbsp;&nbsp; 
-											<i>#pangenome</i> 
+											<i>#variant calling</i> &nbsp;&nbsp;&nbsp;&nbsp; 
+											<i>#lift-over</i> &nbsp;&nbsp;&nbsp;&nbsp; 
+											<i>#pangenomics</i> 
 										</p>
 										<h2 id="content">Skills</h2>
 										<p> 
 											<ul>
-												<li>Languages: Mandarin (traditional), English, Taiwanese</li>
-												<li>Progamming languages: Python, R, C++, C, Rust</li>
-												<li>Hardware description language: Verilog</li>
-												<li>Tools: git, Latex, Bash, Snakemake</li>
+												<li><b>Languages</b>: Mandarin (traditional), English, Taiwanese</li>
+												<li><b>Progamming languages</b>: Python, R, C++, C, Rust</li>
+												<li><b>Hardware description language</b>: Verilog</li>
+												<li><b>Tools</b>: git, Latex, Bash, Snakemake, unittest, Docker, make, cmake</li>
 											</ul>
 										</p>
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<h2>Education</h2>
 												<ul class="alt">
-													<li><b>PhD in Computer Science</b> (2018-present) </br> 
+													<li><b>PhD in Computer Science</b> (2018-expected 2022) </br> 
 														Johns Hopkins Unversity, 
 														with <a href="http://langmead-lab.org/">Dr. Ben Langmead</a></li>
 													<li>
@@ -109,12 +112,16 @@
 											<div class="col-6 col-12-small">
 												<h2>Teaching</h2>
 												<ul class="alt">
+													<li> <b>Undergraduate Researcher Mentor</b> (2022)</br>
+														Advised <a href="https://www.linkedin.com/in/steven-solar/">Steven Solar</a> (senior undergrad at JHU) to develop a data-driven model to predict sequence mapping quality.
+													</li>
 													<li> <b>Internship Mentor</b> (2019)</br>
-														Advised Sheila Iyer (high-school intern) to study the reference bias of genomic sequence alignment.
+														Advised <a href="https://www.linkedin.com/in/sheilaiyer/">Sheila Iyer</a> (high-school intern) to study the reference bias of genomic sequence alignment.
 														The work became part of a research paper and won regional science fair.
 													</li>
 													<li> <b>Teaching Assistant</b> </br>
-														NTU: Data Compression (2015) (grad-level), Computer Architecture (2016, 2017) (upper undergrad)
+														<b>JHU</b>: Sketching and Indexing (2021) </br> 
+														<b>NTU</b>: Data Compression (2015) (grad-level), Computer Architecture (2016, 2017) (upper undergrad)
 													</li>
 												</ul>
 											</div> 
@@ -124,6 +131,9 @@
 													I helped to organize four summer/winter camps for local kids in 2011-2013 at Penghu &mdash; a distant island of Taiwan. 
 													We also worked closely with local communities to held annual events and visited elder people whose children were working out of town.
 													This experience has become a big part of me. I went back to Penghu to serve one year in Wen-Ao Elementary School in 2018.
+												</p>
+												<h2>Podcast</h2>
+												<p>I co-host the <a href="https://podcasts.apple.com/us/podcast/btba-presents-生技來一刻/id1531820937">"生技來一刻" podcast</a> (in Mandarin) to interview experts in biotech to discuss career and technological advancements.
 												</p>
 											</div>
 										</div>
