--- a/life.html
+++ b/life.html
@@ -105,7 +105,7 @@
 												Sports is the biggest part of me outside working. I play lots of sports.
 												I was on my departmental table tennis team from 2010 to 2017 and I led the team as the captain in 2013. 
 												We played tournaments over many cities in Taiwan and won several champs. 
-												I play badminton and squash with my friends at Hopkins frequently, and occasionally play some basketball and softball.
+												I play badminton and squash with my friends at Hopkins frequently and occasionally play some basketball and softball.
 											</br>
 												I also watch lots of sports. 
 												I've been a fan for Boston Red Sox and Dallas Mavericks for more than a decade. 
@@ -113,7 +113,7 @@
 											
 												<ul>
 												Stadiums I've visited:
-													<li>MLB: Boston (3), Baltimore (5), NY Yankees (2), Chicago Cubs (2), San Francisco (2), NY Mets, Washington, Seattle</li>
+													<li>MLB: Boston (3), Baltimore (8), NY Yankees (2), Chicago Cubs (2), San Francisco (3), NY Mets, Washington, Seattle, San Diego</li>
 													<li>NBA: Dallas, Washington (2), LA Lakers, Boston, Brooklyn, Chicago, New Orleans, Miami</li>
 													<li>NFL: Baltimore (2), Dallas, NY Giants, Philadelphia, San Francisco (pre-season)</li>
 													<li>NHL: Dallas</li>
